--- a/config/woz_stat_update.cfg
+++ b/config/woz_stat_update.cfg
@@ -16,3 +16,7 @@ foreign_language=german
 value_specific_decoder=False
 learn_belief_state_update=True
 tau=0.1
+
+[multilingual]
+only_dialogue=False
+only_translate=False
